--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,6 +1,10 @@
 {
   "extends": "./tsconfig.app.json",
   "exclude": [],
+  "include": [
+    "env.d.ts",
+    "src/**/*"
+  ],
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
