--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -3,7 +3,8 @@
   "exclude": [],
   "include": [
     "env.d.ts",
-    "src/**/*"
+    "src/**/*.ts",
+    "src/**/*.vue"
   ],
   "compilerOptions": {
     "composite": true,
